# mpi_test

./: CMakeLists.txt  init.c  init.h  main.c  plot.py
multi_grid/: multi_grid.c  multi_grid.h  operators.c  operators.h
tSolver/: CMakeLists.txt  tSolver.c
